--- a/Common/Server/ppServer/docker-compose.yml
+++ b/Common/Server/ppServer/docker-compose.yml
@@ -2,6 +2,6 @@ web:
   build: .
   ports:
     - "8000:8000"
-  command: /code/manage.py runserver 0.0.0.0:8000
+  command: python /code/manage.py runserver 0.0.0.0:8000
 
 
