--- a/Common/Server/ppServer/Dockerfile
+++ b/Common/Server/ppServer/Dockerfile
@@ -4,10 +4,15 @@ FROM daocloud.io/python:3.5
 # 维护者信息
 MAINTAINER qiuchenlong <www.10.com>
 
-ADD blog.tar.gz /usr/src/ 
+RUN mkdir -p /app
+WORKDIR /app
 
-# app 所在目录
-WORKDIR /usr/src/qiuchenlong
+ADD requirements.txt requirements.txt
+RUN pip install -r requirements.txt
 
-# 安装 app 所需依赖
-RUN pip install --no-cache-dir -r requirements.txt -i http://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com
+COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
+EXPOSE 8888
+ENTRYPOINT ["docker-entrypoint.sh"]
+CMD [""]
