--- a/Common/Server/ppServer/Dockerfile
+++ b/Common/Server/ppServer/Dockerfile
@@ -10,9 +10,10 @@ WORKDIR /app
 ADD requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+COPY . /app
+COPY docker-entrypoint.sh docker-entrypoint.sh
+RUN chmod +x docker-entrypoint.sh
 
-EXPOSE 8888
-ENTRYPOINT ["docker-entrypoint.sh"]
-CMD [""]
+EXPOSE 8000
+
+CMD /app/docker-entrypoint.sh
